Monitor/Dll/DllWrapper.cs


        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FreeTdLambdaAgent(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern byte TdLambdaAgentGetSearchMode(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool TdLambdaAgentSetSearchMode(IntPtr agentPtr,
            [MarshalAs(UnmanagedType.U1)]
            bool searchMode);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern int TdLambdaAgentGetSearchModeIterations(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool TdLambdaAgentSetSearchModeIterations(IntPtr agentPtr, int searchIterations);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern IntPtr PackTdLambdaAgent(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern byte TdLambdaAgentGetPerformanceEvaluationMode(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool TdLambdaAgentSetPerformanceEvaluationMode(IntPtr agentPtr,
            [MarshalAs(UnmanagedType.U1)] bool mode);

        #endregion

        #region Interactive Agent

        /// <summary>
        /// Data transferring object to pass moves
        /// </summary>
        [StructLayout(LayoutKind.Sequential)]
        public struct MoveDto
        {
            /// <summary>
            ///	Pointer to the array of sub_moves
            /// </summary>
            public IntPtr SubMoves;

            /// <summary>
            ///	Number of sub-moves in the array
            /// </summary>
            public int SubMovesCnt;

            /// <summary>
            /// Rank of the corresponding piece after the move was taken
            /// (can differ from the original rank of the piece in case of a "transformation" move).
            /// </summary>
            public int FinalPieceRank;
        };

        /// <summary>
        /// "Make move" delegate
        /// </summary>
        public delegate int MakeMoveCallBack(
            [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)]
            int[] state, int stateSize,
            [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 3)]
            MoveDto[] moves, int movesSize);

        /// <summary>
        /// "Game over" delegate
        /// </summary>
        public delegate void GameOverCallBack(
            [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)]
            int[] state, int stateSize, int gameResult);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern IntPtr ConstructInteractiveAgent(
            [MarshalAs(UnmanagedType.FunctionPtr)]
            MakeMoveCallBack makeMoveCallBack,
            [MarshalAs(UnmanagedType.FunctionPtr)]
            GameOverCallBack gameOverCallBack,
            [MarshalAs(UnmanagedType.U1)]
            bool playForWhites);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FreeInteractiveAgent(IntPtr agentPtr);
        #endregion

        #region Agent
        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool AgentSetTrainingMode(IntPtr agentPtr,
            [MarshalAs(UnmanagedType.U1)]
            bool trainingMode);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern byte AgentGetTrainingMode(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern byte AgentGetCanTrainFlag(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, EntryPoint = "AgentGetId")]
        private static extern IntPtr AgentGetIdInternal(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.I4)]
        public static extern StateTypeId AgentGetStateTypeId(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, EntryPoint = "AgentGetName")]
        private static extern IntPtr AgentGetNameInternal(IntPtr agentPtr);

        /// <summary>
        /// Converts given pointer to ANSI string
        /// </summary>
        private static string PtrToAnsiString(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero)
                return null;

            return Marshal.PtrToStringAnsi(ptr);
        }

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        public static string AgentGetId(IntPtr agentPtr)
        {
            return PtrToAnsiString(AgentGetIdInternal(agentPtr));
        }

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        public static string AgentGetName(IntPtr agentPtr)
        {
            return PtrToAnsiString(AgentGetNameInternal(agentPtr));
        }

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool AgentSetName(IntPtr agentPtr, string id);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern int AgentGetRecordsCount(IntPtr agentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, EntryPoint = "AgentGetRecordById")]
        private static extern IntPtr AgentGetRecordByIdInternal(IntPtr agentPtr, int recordId);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        public static string AgentGetRecordById(IntPtr agentPtr, int recordId)
        {
            return PtrToAnsiString(AgentGetRecordByIdInternal(agentPtr, recordId));
        }

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, CharSet = CharSet.Ansi)]
        public static extern int AgentAddRecord(IntPtr agentPtr, string record);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return:MarshalAs(UnmanagedType.U1)]
        public static extern bool CanPlay(IntPtr agent0Ptr, IntPtr agent1Ptr, [MarshalAs(UnmanagedType.I4)] out StateTypeId suggestedStateTypeId);

        #endregion

        #region AgentPack
        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, CharSet = CharSet.Ansi)]
        public static extern IntPtr AgentPackLoadFromFile(string path);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool AgentPackSaveToFile(IntPtr agentPackPtr, string path);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool AgentPackFree(IntPtr agentPackPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern IntPtr AgentPackGetAgentPtr(IntPtr agentPackPtr);
        #endregion

        #region EnsembleAgent
        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern IntPtr ConstructTdlEnsembleAgent(int subAgentCount,
            [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)]
            IntPtr[] tdlAgents);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FreeTdlEnsembleAgent(IntPtr ensembleAgentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool SaveTdlEnsembleAgent(IntPtr ensembleAgentPtr, string filePath);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, CharSet = CharSet.Ansi)]
        public static extern IntPtr LoadTdlEnsembleAgent(string filePath);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern int TdlEnsembleAgentGetSize(IntPtr ensembleAgentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName, EntryPoint = "TdlEnsembleAgentGetSubAgentId")]
        private static extern IntPtr TdlEnsembleAgentGetSubAgentIdInternal(IntPtr ensembleAgentPtr, int subAgentId);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        public static string TdlEnsembleAgentGetSubAgentId(IntPtr ensembleAgentPtr, int subAgentId)
        {
            var strPtr = TdlEnsembleAgentGetSubAgentIdInternal(ensembleAgentPtr, subAgentId);

            if (strPtr == IntPtr.Zero)
                return null;

            return Marshal.PtrToStringAnsi(strPtr);
        }

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern int TdlEnsembleAgentAdd(IntPtr ensembleAgentPtr, IntPtr tdlAgentPtr);


        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool TdlEnsembleAgentRemove(IntPtr ensembleAgentPtr, int subAgentId);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern int TdlEnsembleAgentSetSingleAgentMode(IntPtr ensembleAgentPtr, bool setSingleAgentMode);
